Background Image disappears when zooming in #44118

Closed
opened 2015-03-24 15:34:39 +01:00 by Georg K · 10 comments

System Information
Win 7 x64, Radeon HD7770

Blender Version
Broken: 2.74 RC2
Worked:

Short description of error
If I zoom in one step more in the 3D viewport, the background image disappears if I used the new rotation feature (great addition btw).
I could not reproduce the effect from scratch so I threw everything but the background out of the file I was working on.

Exact steps for others to reproduce the error
In the 3D viewport of Background_Image_bug.blend, scroll your mousewheel one increment to zoom in and the background image should disappear.

**System Information** Win 7 x64, Radeon HD7770 **Blender Version** Broken: 2.74 RC2 Worked: **Short description of error** If I zoom in one step more in the 3D viewport, the background image disappears if I used the new rotation feature (great addition btw). I could not reproduce the effect from scratch so I threw everything but the background out of the file I was working on. **Exact steps for others to reproduce the error** In the 3D viewport of [Background_Image_bug.blend](https://archive.blender.org/developer/F154697/Background_Image_bug.blend), scroll your mousewheel one increment to zoom in and the background image should disappear.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @georgK

Added subscriber: @georgK
Author

Confirmed the bug in Ubuntu 14.04 x64, same machine, 2.74RC1
The background image will reappear when panning the view down towards the center of the scene

Confirmed the bug in Ubuntu 14.04 x64, same machine, 2.74RC1 The background image will reappear when panning the view down towards the center of the scene

Added subscriber: @TARDISMaker-2

Added subscriber: @TARDISMaker-2

I was just coming here to report this bug.

OS: Debian Jessie
GPU: GeForce GT 640
Version: 2.74.2 2ba82d5

Same circumstances, could recreate after a while in a single file, but couldn't from a new one.

I was just coming here to report this bug. OS: Debian Jessie GPU: GeForce GT 640 Version: 2.74.2 2ba82d5 Same circumstances, could recreate after a while in a single file, but couldn't from a new one.
Campbell Barton self-assigned this 2015-03-25 09:01:00 +01:00

checking on a fix.

checking on a fix.

This issue was referenced by 3eb33b804d

This issue was referenced by 3eb33b804d48ac4009184722db02ecaa9d71ef21

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3eb33b804d.

Closed by commit 3eb33b804d.

This issue was referenced by 143dbfb33e

This issue was referenced by 143dbfb33e2a7ef1dad43fde9af427f47bca5f34
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44118
No description provided.