Fix T44118: Rotated background image disappears

Image clipping didn't take rotation into account.